refactor accessibility tags

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <span class="separation"></span>
     <!--decriptionTitle-->
     <section class="descriptionTitle">
-        <h1  aria-level="1"> Trouver votre hébergement pour des vacanes de reve </h1>
+        <h1> Trouver votre hébergement pour des vacanes de reve </h1>
         <p> En plein centre ville ou en pleine nature</p>
     </section>
     <!--Search Input-->
     <section>
-        <div aria-hidden="true" aria-level="2" aria-label="Recherche des informations"></div>
-        <form class="searchInput">
+        <div aria-hidden="true" aria-level="2" aria-label="Recherche des informations" role="heading"></div>
+        <form class="searchInput" role="form">
             <i class="fas fa-map-marker-alt"></i>
             <input type="search" class="search" placeholder='Marseille, France' aria-label="Champ_Recherche">
 
@@ -47,7 +47,7 @@
     </section>
     <!--Filter Container-->
     <section class="filterContainer">
-        <h1 aria-level="1">Filtres</h1>
+        <h1>Filtres</h1>
         <div class="firtsBtn">
             <div class="liBtn" role="button">
                 <i class="fas fa-money-bill-wave"></i>
@@ -69,7 +69,7 @@
     </section>
     <!--Section information-->
     <section class="information">
-        <div aria-hidden="true" aria-level="1" aria-label="informations"></div>
+        <div aria-hidden="true" aria-level="1" aria-label="informations" role="heading"></div>
         <div class="round-btn" role="button" aria-label="information">
             <i class="fas fa-info"></i>
         </div>
@@ -83,7 +83,6 @@
                 <div class="imageTitle">
                     <h2>Hébergement à Marseille</h2>
                 </div>
-
                 <div class="parent_box">
                     <div class="box">
                         <figure>
