--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </section>
     <!--Search Input-->
     <section>
-        <div aria-hidden="true" aria-level="2" aria-label="Recherche des informations" role="heading"></div>
-        <form class="searchInput" role="form">
+        <h1 aria-hidden="true" aria-label="Recherche des informations"></h1>
+        <form class="searchInput">
             <i class="fas fa-map-marker-alt"></i>
             <input type="search" class="search" placeholder='Marseille, France' aria-label="Champ_Recherche">
 
@@ -69,7 +69,7 @@
     </section>
     <!--Section information-->
     <section class="information">
-        <div aria-hidden="true" aria-level="1" aria-label="informations" role="heading"></div>
+        <h1 aria-hidden="true"  aria-label="informations"></h1>
         <div class="round-btn" role="button" aria-label="information">
             <i class="fas fa-info"></i>
         </div>
@@ -78,6 +78,7 @@
     </section>
     <!--Section hebergement -->
     <section id="hebergement">
+        <h1 aria-hidden="true"  aria-label="Hébergement à Marseille"></h1>
         <div class="hebergementsContainer">
             <article>
                 <div class="imageTitle">
