refactoring  css tablette responsive

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             <h3>
                                 Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128<strong>&#8364;</strong></p>
-                            <ul class="startBoxPopular normalsize">
+                            <ul class="startBoxPopular">
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
@@ -219,7 +219,7 @@
                             <h3>Au coeur de l'eau chambres d'
                                 Hôtel</h3>
                             <p>Nuit à partir de 17<strong>&#8364;</strong></p>
-                            <ul class="startBoxPopular">
+                            <ul class="startBoxPopular  normalsize">
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
@@ -233,9 +233,9 @@
                     <figure>
                         <img src="images/compress/6Compress.jpg" alt="photo_emile-guillemot">
                         <figcaption>
-                            <h3>Hôtel Le soleil du matin</h3>
+                            <h3>Hôtel Tout bleu et blanc</h3>
                             <p>Nuit à partir de 128<strong>&#8364;</strong></p>
-                            <ul class="startBoxPopular normalsize">
+                            <ul class="startBoxPopular">
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
@@ -263,7 +263,7 @@
                 </figure>
             </div>
             <div class="rowPhoto">
-                <div class="boxSmall">
+                <div class="boxSmall" id="FortdePomegues">
                     <figure>
                         <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="marcus-loke">
                         <figcaption>
@@ -272,9 +272,8 @@
                     </figure>
 
                 </div>
-                <div class="boxSmall smallBigMargin">
+                <div class="boxSmall smallBigMargin" id="ileDuFriout">
                     <figure>
-
                         <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="marcus-loke">
                         <figcaption>
                             <h4>iles du Friout</h4>
